Fixed invisible link style

--- a/app/assets/stylesheets/_inline.scss
+++ b/app/assets/stylesheets/_inline.scss
@@ -113,6 +113,10 @@ sup,
 .invisible-link {
   display: inline;
   color: inherit !important;
+
+  &:hover {
+    text-decoration: none;
+  }
 }
 
 .keys {
